[package]
name = "coap"
version = "0.8.1"
description = "A CoAP library"
readme = "README.md"
documentation = "http://covertness.github.io/coap-rs/master/coap/index.html"
repository = "https://github.com/covertness/coap-rs"
license = "MIT"
authors = ["Yang Zhang <wuyingfengsui@gmail.com>"]
keywords = ["CoAP"]
edition = "2018"


[features]
util = [ "simplelog", "structopt", "humantime" ]



[dependencies]
bincode = "1.1.2"
serde = { version= "1.0.88", features= [ "derive" ] }
url = "1.7.2"
num-derive = "0.2.4"
num-traits = "0.2.6"
log = "0.4.6"
regex = "1.1.0"
futures = "0.3"
bytes = "1.0.1"
rand = "0.7.3"

tokio =  {version = "1.0", features = ["full"]}
tokio-util = { version = "0.6.3", features = [ "full" ] }

simplelog = { version = "0.8.0", optional = true }
structopt = { version = "0.3.17", optional = true }
humantime = { version = "2.0.1", optional = true }
openssl = "0.10.32"



#tokio-tls = "0.3.1"
native-tls = "0.2.7"
tokio-openssl = "0.6.1"
tokio-native-tls = "0.3.0"

[dev-dependencies]
quickcheck = "0.8.2"

[[bin]]
name = "coapcli"
path = "src/util/main.rs"
required-features = [ "util" ]


[patch.crates-io]
native-tls = { path = "../rust-native-tls" }
